23-05-2011: - Client: -- Working on Stream_cloner class. - Server: -- Hide stream when it has > 1 strikes.
19-05-2011:
- Client:
-- Moved pystream_core to pystream package.
- Server:
-- Fixed bug in new redir API function.
-- Fixed bug in language detection.

--- a/server/css/web.css
+++ b/server/css/web.css
@@ -161,6 +161,16 @@ div.message {
     font-size: 15px;
 }
 
+div.warning {
+    text-align: center;
+    background-color: #feffc0;
+    border: 1px solid #e1e16e;
+    margin: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 15px;
+}
+
 div.error {
     text-align: center;
     background-color: #ED989C;
