--- a/server/templates/stream.html
+++ b/server/templates/stream.html
@@ -21,14 +21,6 @@
 </tr>
 </table>
 
-{% if stream.public %}
-    {% if stream.strikes > 0 %}
-    <div class="message">This stream is not working propertly. It has {{ stream.strikes }} strikes.</div>
-    {% endif %}
-{% else %}
-    <div class="message">{{ stream.date|stream_time_left:stream.strikes }}</div>
-{% endif %}
-
 {% if publisher or admin %}
 <div class="stream_description">
     <form name="stream" action="/mod_stream" method="post">
@@ -77,9 +69,37 @@
 <table width="100%">
 <tr>
     <td width="40%" valign="top">
-    <iframe src="/api/redir/{{ stream.key.id }}" width="100%" height="800" frameborder="0">
-        You need a new browser -&gt; <a href="http://www.google.com/chrome">Google Chrome</a>
-    </iframe>
+    {% if stream.public %}
+        {% if stream.strikes > 0 %}
+        <div class="warning" id='stwarning'>
+            This stream is not working propertly.<br/>
+            It has <b>{{ stream.strikes }}</b> strikes.<br/>
+            Clic <a href="#" onclick="show_stream('{{ stream.key.id }}')">here</a> to show.
+            {% if publisher %}
+                <br/><br/><br/>
+                You are using port: <b>{{ stream.port }}</b>.
+                Pystream client can use UPnP to open your port on your router, but if it fails,
+                or if UPnP support is not avaliable, you will need to manually open your port
+                on you router.
+                <br/><br/>
+                You can check if you port is open <a href="http://canyouseeme.org">here</a>.
+            {% endif %}
+        </div>
+        <iframe id="stframe" src="" width="100%" height="700" frameborder="0">
+            You need a new browser -&gt; <a href="http://www.google.com/chrome">Google Chrome</a>
+        </iframe>
+        {% else %}
+        <iframe id="stframe" src="/api/redir/{{ stream.key.id }}" width="100%" height="700" frameborder="0">
+            You need a new browser -&gt; <a href="http://www.google.com/chrome">Google Chrome</a>
+        </iframe>
+        {% endif %}
+    {% else %}
+        <div class="message">{{ stream.date|stream_time_left:stream.strikes }}</div>
+        <iframe id="stframe" src="/api/redir/{{ stream.key.id }}" width="100%" height="700" frameborder="0">
+            You need a new browser -&gt; <a href="http://www.google.com/chrome">Google Chrome</a>
+        </iframe>
+    {% endif %}
+    
     {% if admin %}
         <br/>{{ stream.ip|full_ip }}:{{ stream.port }}
         <a href="#" onclick="remove_stream('{{ stream.key }}')">remove stream</a>
@@ -105,16 +125,14 @@
             </td>
             <td class="text">{{ comment.text|safe|linebreaksbr|urlize }}</td>
         </tr>
-        {% empty %}
-            <tr><td colspan="2"><div class="message">No comments yet!</div></td></tr>
         {% endfor %}
         <tr>
             <td>
-            {% if admin %}
-                <b>admin</b>
+            {% if publisher %}
+                <b>publisher</b>
             {% else %}
-                {% if publisher %}
-                    <b>publisher</b>
+                {% if admin %}
+                    <b>admin</b>
                 {% else %}
                     <b>anonymous</b>
                 {% endif %}
