--- a/server/css/client.css
+++ b/server/css/client.css
@@ -24,20 +24,32 @@ div.title a {
 }
 
 table {
-    width: 100%;
-    padding-top: 0px;
-    margin-top: 0px;
+    margin: 0px;
+}
+
+table td {
+    vertical-align: top;
+    min-width: 500px;
+}
+
+ul {
+    list-style: none;
+    padding-left: 5px;
+    margin: 0px;
+}
+
+ul li {
+    padding: 3px;
     font-size: 13px;
     font-weight: bold;
 }
 
-table tr:hover {
-    background-color: #EFEFEF;
+ul li:hover {
+    background-color: #C7DDED
 }
 
-table td.size {
-    text-align: right;
+span {
+    float: right;
     font-size: 11px;
     font-weight: normal;
 }
-
