--- a/server/templates/stream.html
+++ b/server/templates/stream.html
@@ -21,10 +21,6 @@
 </tr>
 </table>
 
-{% if not stream.public %}
-    <div class="message">{{ stream.date|stream_time_left:stream.strikes }}</div>
-{% endif  %}
-
 {% if publisher or admin %}
 <div class="stream_description">
     <form name="stream" action="/mod_stream" method="post">
@@ -68,110 +64,110 @@
     {{ stream.date|date:"d/m/Y H:i" }}
     | {{ stream.os|show_platform }}
     | {{ stream.status_text }}
+    {% if admin %}
+        | {{ stream.ip|full_ip }}:{{ stream.port }} |
+        <a href="#" onclick="remove_stream('{{ stream.key }}')">remove stream</a>
+    {% endif %}
 </div>
 
-<table width="100%">
-<tr>
-    <td width="40%" valign="top">
-    {% if stream.public %}
-        {% if stream.strikes > 0 %}
+
+{% if not stream.public %}
+    <div class="message">{{ stream.date|stream_time_left:stream.strikes }}</div>
+{% endif  %}
+
+{% if stream.public %}
+    {% if stream.strikes > 0 %}
         <div class="warning" id='stwarning'>
-            {{ lang|translation:'stnotwork' }}.<br/>
-            {{ lang|translation:'ithas' }} <b>{{ stream.strikes }}</b> strikes.<br/>
+        {{ lang|translation:'stnotwork' }}.
+        {{ lang|translation:'ithas' }} <b>{{ stream.strikes }}</b> strikes.
+        Clic <a href="#" onclick="show_stream('{{ stream.key.id }}')">{{ lang|translation:'here' }}</a>
+        {{ lang|translation:'toshow' }}.
+        {% if publisher %}
+            <br/><br/>
+            {{ lang|translation:'usingport' }}: <b>{{ stream.port }}</b>.
+            {{ lang|translation:'stnotwork1' }}.
+            <br/><br/>
+            <a href="/report?link={{ stream.get_link }}">{{ lang|translation:'report' }}</a>
+        {% endif %}
+        </div>
+        <iframe id="stframe" src="" width="100%" height="0" frameborder="0">
+            You need a new browser -&gt; <a href="http://www.google.com/chrome">Google Chrome</a>
+        </iframe>
+    {% else %}
+        <iframe id="stframe" src="/api/redir/{{ stream.key.id }}" width="100%" height="400" frameborder="0">
+            You need a new browser -&gt; <a href="http://www.google.com/chrome">Google Chrome</a>
+        </iframe>
+    {% endif %}
+{% else %}
+    {% if stream.strikes > 0 %}
+        <div class="warning" id='stwarning'>
+            {{ lang|translation:'stnotwork' }}.
+            {{ lang|translation:'ithas' }} <b>{{ stream.strikes }}</b> strikes.
             Clic <a href="#" onclick="show_stream('{{ stream.key.id }}')">{{ lang|translation:'here' }}</a>
             {{ lang|translation:'toshow' }}.
             {% if publisher %}
-                <br/><br/><br/>
-                {{ lang|translation:'usingport' }}: <b>{{ stream.port }}</b>.
-                {{ lang|translation:'stnotwork1' }}.
                 <br/><br/>
+                {{ lang|translation:'usingport' }}: <b>{{ stream.port }}</b>.<br/>
+                {{ lang|translation:'checkpycli' }}.<br/>
+                <br/>
                 <a href="/report?link={{ stream.get_link }}">{{ lang|translation:'report' }}</a>
             {% endif %}
         </div>
-        <iframe id="stframe" src="" width="100%" height="700" frameborder="0">
+        <iframe id="stframe" src="" width="100%" height="0" frameborder="0">
             You need a new browser -&gt; <a href="http://www.google.com/chrome">Google Chrome</a>
         </iframe>
-        {% else %}
-        <iframe id="stframe" src="/api/redir/{{ stream.key.id }}" width="100%" height="700" frameborder="0">
-            You need a new browser -&gt; <a href="http://www.google.com/chrome">Google Chrome</a>
-        </iframe>
-        {% endif %}
     {% else %}
-        {% if stream.strikes > 0 %}
-            <div class="warning" id='stwarning'>
-                {{ lang|translation:'stnotwork' }}.<br/>
-                {{ lang|translation:'ithas' }} <b>{{ stream.strikes }}</b> strikes.<br/>
-                Clic <a href="#" onclick="show_stream('{{ stream.key.id }}')">{{ lang|translation:'here' }}</a>
-                {{ lang|translation:'toshow' }}.
-                {% if publisher %}
-                    <br/><br/><br/>
-                    {{ lang|translation:'usingport' }}: <b>{{ stream.port }}</b>.<br/>
-                    {{ lang|translation:'checkpycli' }}.<br/>
-                    <br/>
-                    <a href="/report?link={{ stream.get_link }}">{{ lang|translation:'report' }}</a>
-                {% endif %}
-            </div>
-            <iframe id="stframe" src="" width="100%" height="700" frameborder="0">
-                You need a new browser -&gt; <a href="http://www.google.com/chrome">Google Chrome</a>
-            </iframe>
-        {% else %}
-            <iframe id="stframe" src="/api/redir/{{ stream.key.id }}" width="100%" height="700" frameborder="0">
-                You need a new browser -&gt; <a href="http://www.google.com/chrome">Google Chrome</a>
-            </iframe>
-        {% endif %}
+        <iframe id="stframe" src="/api/redir/{{ stream.key.id }}" width="100%" height="400" frameborder="0">
+            You need a new browser -&gt; <a href="http://www.google.com/chrome">Google Chrome</a>
+        </iframe>
     {% endif %}
-    
-    {% if admin %}
-        <br/>{{ stream.ip|full_ip }}:{{ stream.port }}
-        <a href="#" onclick="remove_stream('{{ stream.key }}')">remove stream</a>
+{% endif %}
+
+
+<div class="section">
+<div class="title">{{ lang|translation:'comments' }} ({{ stream.comments }}):</div>
+<table class="comments">
+{% for comment in comments %}
+<tr class="comment">
+    <td class="autor">
+        <a name="{{ comment.key.id }}">{{ comment.autor }}</a>
+        <br/>
+        {{ comment.date|timesince }}
+        <br/>
+        {{ comment.os|show_os }}
+        <br/>
+        {% if admin %}
+            {{ comment.ip|full_ip }}
+            <br/>
+            <a href="#" onclick="remove_comment('{{ comment.key }}')">remove</a>
+        {% endif %}
+    </td>
+    <td class="text">{{ comment.text|safe|linebreaksbr|urlize }}</td>
+</tr>
+{% endfor %}
+<tr>
+    <td>
+    {% if publisher %}
+        <b>publisher</b>
+    {% else %}
+        {% if admin %}
+            <b>admin</b>
+        {% else %}
+            <b>anonymous</b>
+        {% endif %}
     {% endif %}
     </td>
-    <td valign="top">
-        <div class="title">{{ lang|translation:'comments' }} ({{ stream.comments }}):</div>
-        <table class="comments">
-        {% for comment in comments %}
-        <tr class="comment">
-            <td class="autor">
-                <b>{{ comment.autor }}</b>
-                <br/>
-                {{ comment.date|timesince }}
-                <br/>
-                {{ comment.os|show_os }}
-                <br/>
-                {% if admin %}
-                    {{ comment.ip|full_ip }}
-                    <br/>
-                    <a href="#" onclick="remove_comment('{{ comment.key }}')">remove</a>
-                {% endif %}
-            </td>
-            <td class="text">{{ comment.text|safe|linebreaksbr|urlize }}</td>
-        </tr>
-        {% endfor %}
-        <tr>
-            <td>
-            {% if publisher %}
-                <b>publisher</b>
-            {% else %}
-                {% if admin %}
-                    <b>admin</b>
-                {% else %}
-                    <b>anonymous</b>
-                {% endif %}
-            {% endif %}
-            </td>
-            <td>
-            <form name="comment" action="/comment" method="post">
-            <input type="hidden" name="stream_id" value="{{ stream.key.id }}"/>
-            <textarea name="text" rows="6" cols="60">{{ lang|translation:'leavecom' }}</textarea>
-            <br/>{{ captcha|safe }}
-            <input type="submit" value="{{ lang|translation:'send' }}"/>
-            </form>
-            </td>
-        </tr>
-        </table>
+    <td>
+        <form name="comment" action="/comment" method="post" onsubmit="send_comment('{{ lang|translation:'leavecom' }}', '{{ lang|translation:'beoriginal' }}'); return false">
+        <input type="hidden" name="stream_id" value="{{ stream.key.id }}"/>
+        <textarea name="text" rows="6" cols="60" onfocus="this.select()">{{ lang|translation:'leavecom' }}</textarea>
+        <br/>{{ captcha|safe }}
+        <input type="submit" value="{{ lang|translation:'send' }}"/>
+        </form>
     </td>
 </tr>
 </table>
+</div>
 
 </div>
 {% include "footer.html" %}
